--- a/user_app/templates/login.html
+++ b/user_app/templates/login.html
@@ -9,8 +9,14 @@
     <h1>Signup form</h1>
     <form action="" method="post">
         {% csrf_token %}
+
+        <label for="">Username</label>
+        <input type="text" name="username">
+
+        <label for="">passwor</label>
+        <input type="text" name="password">
         
-        <button>Signup</button>
+        <button>login</button>
     </form>
 </body>
 </html>
