--- a/todo_tracker/templates/list.html
+++ b/todo_tracker/templates/list.html
@@ -8,7 +8,7 @@
 <body>
    <form action="" method="post">
     {% csrf_token %}
-    <table>
+    <table border="1">
         <th>category</th>
         <th>titile</th>
         <th>date</th>
