--- a/user_app/templates/home.html
+++ b/user_app/templates/home.html
@@ -74,7 +74,7 @@
 </head>
 <body>
 
-    <h1>💰 Expense / To-Do Tracker</h1>
+    <h1> To-Do Tracker</h1>
 
     <div class="todo-container">
         <!-- Add new entry -->
@@ -111,7 +111,7 @@
                     <td>{{ ls.price }}</td>
                     <td>{{ ls.date }}</td>
                     <td>{{ ls.note }}</td>
-                    <td><a href="{% url 'delete_task' todo.id %}">❌</a></td>
+                    <td><a >❌</a></td>
                 </tr>
             {% empty %}
                 <tr><td colspan="6">No entries yet.</td></tr>
