--- a/todo_tracker/templates/list.html
+++ b/todo_tracker/templates/list.html
@@ -7,23 +7,18 @@
 </head>
 <body>
    <form action="" method="post">
-    {% csrf_token %}
-    <table border="1">
-        <th>category</th>
-        <th>title</th>
-        <th>date</th>
-        <th> price</th>
-        <th>note</th>
-     {% for ls in alllist %}
-        <tr>
-            <td >{{ls.category}}</td>
-            <td>{{ls.title}}</td>
-            <td>{{ls.date}}</td>
-            <td>{{ls.price}}</td>
-            <td>{{ls.note}}</td>
-        </tr>
-    </table>
-    {% endfor %}
+    {% for ls in alllist %}
+<tr>
+    <td>{{ ls.title }}</td>
+    <td>{{ ls.category }}</td>
+    <td>{{ ls.price }}</td>
+    <td>{{ ls.date }}</td>
+    <td>{{ ls.note }}</td>
+</tr>
+{% empty %}
+<tr><td colspan="5">No entries yet.</td></tr>
+{% endfor %}
+
    </form>
 </body>
 </html>
